# api/server.go
@@ -12,6 +12,7 @@ import (
 	_ "github.com/claravelita/final-project-training-mnc/docs"
 	"github.com/claravelita/final-project-training-mnc/infrastructure"
 	"github.com/claravelita/final-project-training-mnc/repository"
+	photoUsecase "github.com/claravelita/final-project-training-mnc/usecase/photo"
 	userUsecase "github.com/claravelita/final-project-training-mnc/usecase/user"
 
 	"github.com/labstack/echo/v4"
@@ -40,10 +41,15 @@ func (server *Server) InitializeServer() {
 
 	groupUser := server.Route.Group("/users")
 	userRepo := repository.NewUserRepository(initDB)
-
 	userUsecase := userUsecase.NewUserImplementation(userRepo, AuthHelper)
 	userController := controller.NewUserController(userUsecase)
 	userController.Route(groupUser)
+
+	groupPhoto := server.Route.Group("/photos")
+	photoRepo := repository.NewPhotoRepository(initDB)
+	photoUsecase := photoUsecase.NewPhotoImplementation(photoRepo, userRepo, AuthHelper)
+	photoController := controller.NewPhotoController(photoUsecase)
+	photoController.Route(groupPhoto)
 
 	serverConfiguration := &http.Server{
 		Addr:         ":" + os.Getenv("PORT"),
